...
            Button(action: {
                onFilterTap?()
            }) {
                FilterButtonLabel(isActive: hasActiveFilters)
            }
            .buttonStyle(AddRowButtonStyle())
            .accessibilityIdentifier("CollectionFilterButtonIdentifier")
            
            if hasActiveFilters {
                Button(action: {
                    clearFilter()
                }, label: {
                    ZStack {
...
                        .foregroundStyle(.blue)
                        .font(.system(size: 14))
                        .frame(width: 80, height: 27)
                        .overlay(RoundedRectangle(cornerRadius: 6)
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
                        VStack(spacing: 8) {
                            if viewModel.tableDataModel.selectedRows.count == 1 {
                                Button(action: {
                                    showingPopover = false
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }

                            Button(action: {
                                showingPopover = false
                                viewModel.deleteSelectedRow()
                            }) {
...
                                    .foregroundStyle(.red)
                                    .font(.system(size: 14))
                                    .frame(height: 27)
                            }
                            .padding(.horizontal, 16)
                            .padding(.bottom, 10)
                            .accessibilityIdentifier("TableDeleteRowIdentifier")

//                            Button(action: {
//                                showingPopover = false
//                                viewModel.duplicateRow()
//                            }) {
//                                Text("Duplicate \(rowTitle)")
...
                                    
                                    Image(systemName: "chevron.left")
                                        .foregroundStyle(viewModel.tableDataModel.shouldDisableMoveUpFilterActive ? .gray : .blue)
                                }
                            })
                            .disabled(viewModel.tableDataModel.shouldDisableMoveUpFilterActive)
                            .accessibilityIdentifier("UpperRowButtonIdentifier")
                            
                            Spacer()
                            
                            Button(action: {
                                viewModel.selectBelowRow()
                                resetChanges()
...
                                    
                                    Image(systemName: "chevron.right")
                                        .foregroundStyle(viewModel.tableDataModel.shouldDisableMoveDownFilterActive ? .gray : .blue)
                                }
                            })
                            .disabled(viewModel.tableDataModel.shouldDisableMoveDownFilterActive)
                            .accessibilityIdentifier("LowerRowButtonIdentifier")
                            
                            if viewModel.tableDataModel.mode == .fill {
                                Button(action: {
                                    viewModel.insertBelowFromBulkEdit()
                                }, label: {
                                    ZStack {
...
                                            .frame(width: 27, height: 27)

                                        Image(systemName: "plus")
                                            .foregroundStyle(.blue)
                                    }
                                })
                                .accessibilityIdentifier("PlusTheRowButtonIdentifier")
                            }
                        } else {
                            Spacer()
                        }
                        
                        Button(action: {
...
