...
    
    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 16) {
                // Main Content
                HStack {
                    Text("Filter")
                        .font(.system(size: 15, weight: .bold))
                        
                    Spacer()
                    
                    Button(action: {
                        Task {
...
                        ZStack {
                            if viewModel.isSearching {
                                ProgressView()
                                    .progressViewStyle(CircularProgressViewStyle(tint: .gray))
                                    .frame(width: 88, height: 27)
                            } else {
                                Text("Apply")
                                    .darkLightThemeColor()
                                    .font(.system(size: 14))
                                    .frame(width: 88, height: 27)
                            }
                        }
                        .overlay(
...
                                }
                            }
                        } label: {
                            Color.clear
                                .contentShape(Rectangle())
                        }
                        .accessibilityIdentifier("SelectSchemaTypeIDentifier")
                        .accessibilityLabel(selectedSchemaKey.isEmpty ? "Select schema type" : getSelectedSchemaTitle())
                    )
                    if !selectedSchemaKey.isEmpty {
                        sortingView
                        VStack(alignment: .leading) {
                            ForEach(0..<totalFiltersCount, id: \.self) { i in
...
                            .foregroundColor(shouldEnableAddFilter() ? .gray : .blue)
                            .disabled(shouldEnableAddFilter())
                            .overlay(
                                RoundedRectangle(cornerRadius: 6)
                                    .stroke(shouldEnableAddFilter() ? .gray : .blue, lineWidth: 1)
                            )
                            .accessibilityIdentifier("AddMoreFilterButtonIdentifier")
                        }
                    }
                    
                    Spacer()
                }
                .id(refreshID)
...
                            }
                        }
                    } label: {
                        Color.clear
                            .contentShape(Rectangle())
                    }
                    .accessibilityIdentifier("CollectionFilterColumnSelectorIdentifier")
                    .accessibilityLabel(currentSelectedFilterColumnID.isEmpty ? "Select column type" : getSelectedFilteredColumnTitle(columnID: currentSelectedFilterColumnID))
                )
                if let index = collectionFilterModels.firstIndex(where: { $0.colID == currentSelectedFilterColumnID && $0.schemaKey == selectedSchemaKey }) {
                    if let column = getSelectedColumn(columnID: currentSelectedFilterColumnID) {
                        CollectionSearchBar(
                            model: $collectionFilterModels[index],
...
