...
                    switch cellModel.data.type {
                    case .text:
                        TextFieldSearchBar(text: $model.filterText)
                            .frame(height: 25)
                    case .dropdown:
                        TableDropDownOptionListView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, selectedDropdownValue: model.filterText)
                            .accessibilityIdentifier("SearchBarDropdownIdentifier")
                    case .number:
                        TableNumberView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, number: model.filterText)
                            .accessibilityIdentifier("SearchBarNumberIdentifier")
                            .font(.system(size: 12))
                            .foregroundColor(.primary)
                            .padding(.vertical, 4)
                            .frame(height: 25)
                            .background(Color.searchFieldBackground)
                            .cornerRadius(6)
                            .padding(.leading, 8)
                    case .multiSelect:
                        TableMultiSelectView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, isSearching: true, searchValue: model.filterText)
                            .accessibilityIdentifier("SearchBarMultiSelectionFieldIdentifier")
                    case .barcode:
                        TableBarcodeView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, text: model.filterText)
                            .accessibilityIdentifier("SearchBarCodeFieldIdentifier")
                            .font(.system(size: 12))
                            .darkLightThemeColor()
                            .padding(.vertical, 4)
...
